# LTCC

./: CMakeLists.txt  main.cpp  scoreReport.cpp  ttt.cpp
CCC/: 11J3.cpp  14J3.cpp  15J2.cpp  16J2.cpp  16J3.cpp  17J2.cpp  17J3.cpp  17J4-ALT.cpp  17J4.cpp  18J3-ALT.cpp  18J3.cpp  21J3.cpp
